--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@vue/composition-api": "^1.0.3",
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
+    "graphql": "^15.6.1",
+    "graphql-request": "^3.6.0",
     "roboto-fontface": "*",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
